--- a/public/robotika/robotika.css
+++ b/public/robotika/robotika.css
@@ -25,7 +25,7 @@
 	position: relative;
 	float: left;
 	width:29%;
-	margin: 0 1.5%;
+	margin: 1.5%;
 	border: #3266cc 2px solid;
 	box-sizing: border-box;
     -moz-box-sizing: border-box;
