--- a/public/galerija/galerija.css
+++ b/public/galerija/galerija.css
@@ -19,7 +19,7 @@
 	padding:0;
 	display:flex;
 	flex-direction:row;
-	justify-content: space-between;
+	justify-content: space-around;
 }
 
 .categoryDiv{
