--- a/public/sertifikati/files/css.css
+++ b/public/sertifikati/files/css.css
@@ -23,6 +23,9 @@ body{
 user-select: none;
 -webkit-tap-highlight-color: transparent;
 overflow-x:hidden;
+background-image: linear-gradient(45deg, #3266cc 1.76%, #ffffff 1.76%, #ffffff 25.29%, #f08113 25.29%, #f08113 26.47%, #fff 26.47%, #fff 50%, #3266cc 50%, #3266cc 51.76%, #ffffff 51.76%, #ffffff 75.29%, #f08113 75.29%, #f08113 76.47%, #fff 76.47%, #fff 100%);
+background-size: 120.21px 120.21px;
+text-align: center;
 }
 
 html{
@@ -43,16 +46,18 @@ text-decoration:none;
 
 .sertifikatTemplate{
     width: 60vw;
-    position: absolute;
-    top: 0;
-    left: 20vw;
+    height:42.34vw;
+    position: relative;
+    margin:2vw auto;
+    background: url(dizajnp.png) no-repeat;
+    background-size: 100% auto;
 }
 
 .ime{
     position: absolute;
-    top:18vw;
+    top:42%;
     left:0;
-    width: 100vw;
+    width: 100%;
     text-align: center;
     font-size: 4vw;
     font-family: allura;
@@ -61,11 +66,82 @@ text-decoration:none;
 
 .broj{
     position: absolute;
-    top:36.3vw;
-    left:27vw;
+    top:85.7%;
+    left:12%;
     text-align: center;
     font-size: 1vw;
     font-family: gothic;
     color:white;
     font-weight: bold;
+}
+
+  .shadow:after{
+    z-index:-1;
+    content:"";
+    position:absolute;
+    -webkit-box-shadow:0 0 40px rgba(0,0,0,0.8);
+    -moz-box-shadow: 0 0 40px rgba(0,0,0,0.8);
+    box-shadow:0 0 40px rgba(0,0,0,0.8);
+    height:20%;left:10%;right:10%;width:80%;bottom:0px;
+    -webkit-border-radius:100%;
+    -moz-border-radius:100%;
+    border-radius:100%;
+  }
+
+  .desc{
+    width: 60vw;
+    height: 40vw;
+    position: relative;
+    margin:5vw auto;
+    background-color: #3266cc;
+    font-family: gothic;
+    font-size: 2vw;
+    color:white;
+    padding: 2vw;
+  }
+
+  
+.downarr{
+	position:absolute;
+	width:4vw;
+	top:85%;
+	left:50%;
+    transform: translate(-2vw,0);
+	-webkit-animation:arrow 2s infinite;
+	animation:arrow 2s infinite;
+}
+
+@-webkit-keyframes arrow {
+	0%{top:95%;}
+	50%{top:100%;}
+	100%{top:95%;}
+}
+@keyframes arrow {
+	0%{top:95%;}
+	50%{top:100%;}
+	100%{top:95%;}
+}
+
+.displnone{
+    display: none;
+}
+
+@media screen and (max-width:800px){
+    .sertifikatTemplate{
+        width:90vw;
+        height: 63.51vw;
+    }
+
+    .ime{
+        font-size: 6vw;
+    }
+
+    .broj{
+        font-size: 1.5vw;
+    }
+
+    .desc{
+        width:90vw;
+        font-size: 3vw;
+    }
 }
