--- a/public/files/kurscss.css
+++ b/public/files/kurscss.css
@@ -79,6 +79,26 @@
 	color:white;
 }
 
+.forsubtext{
+	padding-bottom: 5vh;
+	display: none;
+	transition:ease 1s;
+}
+
+.postsubtext2:hover .forsubtext{
+	display:inline-table;
+}
+
+
+.posttext3{
+	width: 84vw;
+	padding-bottom: 5vh;
+}
+
+.ps3{
+	border-bottom: solid white 2px;
+}
+
 .postimage{
 	width:25vw;
 	position:relative;
@@ -95,6 +115,7 @@
 .home2{
 	width:100%;
 	position:relative;
+	padding-bottom: 10vh;
 	float:left;
 	height:auto;
 	max-height:fit-content;
@@ -110,8 +131,21 @@
 	min-height:100vh;
 	background:white;
 }
+.home4{
+	width:100%;
+	position:relative;
+	float:left;
+	height:auto;
+	max-height:fit-content;
+	background:#6E93DC;
+}
 
 @media screen and (max-width:900px){
+
+.home2{
+	padding-bottom: 5vh;
+}
+
 .postimage{
 	width:80vw;
 	margin-left:9vw;
