--- a/public/files/maincss.css
+++ b/public/files/maincss.css
@@ -237,7 +237,7 @@ a:hover{
 	font-weight:bold;
 	font-size:2.5vw;
 	color: white;
-    text-shadow: rgba(255,255,255,0.3) 0 5px 5px;
+    text-shadow: rgba(255,255,255,0.3) 0 0 3px;
 }
 
 .postsubtext{
@@ -267,23 +267,55 @@ a:hover{
 .triangle{
 	position:absolute;
 	top:0;
-	right:-105vh;
+	right:-110vh;
 	width:0; 
 	height:0; 
-	border-left: 105vh solid transparent;
-	border-right: 105vh solid transparent;
-	border-bottom: 105vh solid #F08113;
+	border-left: 110vh solid transparent;
+	border-right: 110vh solid transparent;
+	border-bottom: 110vh solid #F08113;
+	-webkit-animation:trianim1 ease 1.5s;
+	-webkit-animation-fill-mode: forwards;
+	animation:trianim1 ease 1.5s;
+	animation-fill-mode: forwards;
 }
 
 .triangle2{
 	position:absolute;
 	top:-10vh;
-	right:-115vh;
+	right:-130vh;
 	width:0; 
 	height:0; 
-	border-left: 115vh solid transparent;
-	border-right: 115vh solid transparent;
-	border-bottom: 115vh solid #F6B676;
+	border-left: 120vh solid transparent;
+	border-right: 120vh solid transparent;
+	border-bottom: 120vh solid #F6B676;
+	-webkit-animation:trianim2 ease 1.5s;
+	-webkit-animation-fill-mode: forwards;
+	animation:trianim2 ease 1.5s;
+	animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes trianim1{
+	0%{top:-5vh;right:-160vh}
+	80%{top:5vh;right:-110vh;}
+	100%{top:0vh;right:-120vh;}
+}
+
+@-webkit-keyframes trianim2{
+	0%{top:-15vh;right:-180vh}
+	80%{top:-5vh;right:-120vh;}
+	100%{top:-10vh;right:-130vh;}
+}
+
+@keyframes trianim1{
+	0%{top:-5vh;right:-160vh}
+	80%{top:5vh;right:-110vh;}
+	100%{top:0vh;right:-120vh;}
+}
+
+@keyframes trianim2{
+	0%{top:-15vh;right:-180vh}
+	80%{top:-5vh;right:-120vh;}
+	100%{top:-10vh;right:-130vh;}
 }
 
 
@@ -314,7 +346,35 @@ a:hover{
 	flex:30%;
 	z-index:50;
 	box-shadow:none;
-}
+	background: linear-gradient(270deg, #3266cc, #0091f1);
+	background-size: 400% 400%;
+
+	-webkit-animation: AnimationNames 5s ease infinite;
+	-moz-animation: AnimationNames 5s ease infinite;
+	-o-animation: AnimationNames 5s ease infinite;
+	animation: AnimationNames 5s ease infinite;
+	}
+	
+	@-webkit-keyframes AnimationNames {
+		0%{background-position:0% 50%}
+		50%{background-position:100% 50%}
+		100%{background-position:0% 50%}
+	}
+	@-moz-keyframes AnimationNames {
+		0%{background-position:0% 50%}
+		50%{background-position:100% 50%}
+		100%{background-position:0% 50%}
+	}
+	@-o-keyframes AnimationNames {
+		0%{background-position:0% 50%}
+		50%{background-position:100% 50%}
+		100%{background-position:0% 50%}
+	}
+	@keyframes AnimationNames {
+		0%{background-position:0% 50%}
+		50%{background-position:100% 50%}
+		100%{background-position:0% 50%}
+	}
 
 .flexitemborder{
 	-webkit-box-shadow:inset 0px 0px 0px 1vw #F08113;
@@ -368,7 +428,8 @@ a:hover{
 	height:auto;
 	overflow:visible;
 	border-bottom:solid 2vw #eee;
-	background:#3266cc;
+	background: #3266cc;
+	background: linear-gradient(210deg, rgba(0,151,241,1) 0%, rgba(50,102,204,1) 80%);
 	font-size:3vw;
 	font-family:montserrat;
 	color:white;
@@ -591,7 +652,35 @@ a:hover{
 	max-height:fit-content;
 	margin:2vw 0;
 	overflow:visible;
-	background:#3266cc;
+
+	background: linear-gradient(232deg, #3266cc, #4f8aff);
+    background-size: 400% 400%;
+
+    -webkit-animation: AnimationName 3s ease infinite;
+    -moz-animation: AnimationName 3s ease infinite;
+    -o-animation: AnimationName 3s ease infinite;
+    animation: AnimationName 3s ease infinite;
+}
+
+@-webkit-keyframes AnimationName {
+    0%{background-position:0% 94%}
+    50%{background-position:100% 7%}
+    100%{background-position:0% 94%}
+}
+@-moz-keyframes AnimationName {
+    0%{background-position:0% 94%}
+    50%{background-position:100% 7%}
+    100%{background-position:0% 94%}
+}
+@-o-keyframes AnimationName {
+    0%{background-position:0% 94%}
+    50%{background-position:100% 7%}
+    100%{background-position:0% 94%}
+}
+@keyframes AnimationName {
+    0%{background-position:0% 94%}
+    50%{background-position:100% 7%}
+    100%{background-position:0% 94%}
 }
 
 .uclanisetekst{
@@ -879,6 +968,29 @@ a:hover{
 
 .triangle2{
 	right:-165vh;
+}
+@-webkit-keyframes trianim1{
+	0%{top:-5vh;right:-190vh}
+	80%{top:5vh;right:-155vh;}
+	100%{top:0vh;right:-165vh;}
+}
+
+@-webkit-keyframes trianim2{
+	0%{top:-15vh;right:-210vh}
+	80%{top:-5vh;right:-165vh;}
+	100%{top:-10vh;right:-175vh;}
+}
+
+@keyframes trianim1{
+	0%{top:-5vh;right:-190vh}
+	80%{top:5vh;right:-155vh;}
+	100%{top:0vh;right:-165vh;}
+}
+
+@keyframes trianim2{
+	0%{top:-15vh;right:-210vh}
+	80%{top:-5vh;right:-165vh;}
+	100%{top:-10vh;right:-175vh;}
 }
 
 .posttext{
