--- a/public/files/kurscss.css
+++ b/public/files/kurscss.css
@@ -60,8 +60,8 @@
 .postsubtext2{
 	width:100%;
 	position:relative;
-	margin-top:2vw;
 	font-size:1.5vw;
+	margin-top:2vw;
 	font-weight:normal;
 	font-family:gothic;
 	color:white;
@@ -71,7 +71,7 @@
 	width:50vw;
 	position:relative;
 	float:left;
-	margin-top:5vw;
+	margin-top:2vw;
 	margin-left:7vw;
 	font-family:gothic;
 	font-weight:bold;
@@ -103,7 +103,7 @@
 	width:25vw;
 	position:relative;
 	float:left;
-	margin-top:5vw;
+	margin-top:2vw;
 	margin-left:10vw;
 	border:solid white 10px;
 }
@@ -120,7 +120,7 @@
 	height:auto;
 	max-height:fit-content;
 	min-height:100vh;
-	background:rgba(50, 102, 204,1);
+	background: linear-gradient(270deg, #3266cc, #0091f1);
 }
 .home3{
 	width:100%;
@@ -137,9 +137,21 @@
 	float:left;
 	height:auto;
 	max-height:fit-content;
-	background:#6E93DC;
+	background:linear-gradient(30deg, #5d8deb, #3661b9);
 }
 
+.header{
+	background: linear-gradient(270deg, #3266cc, #0091f1);
+}
+
+.header:hover{
+	background: linear-gradient(270deg, #3266cc, #3266cc);
+}
+
+.main{
+	top:0;
+	padding-top: 95px;
+}
 @media screen and (max-width:900px){
 
 .home2{
