--- a/public/web/primeri/primer8/files/styles.css
+++ b/public/web/primeri/primer8/files/styles.css
@@ -13,7 +13,14 @@ body{
     width:300px;
     height: 300px;
     background: red;
-    transition: left 1s ease;
+    transition: left 0.5s ease;
+    font-size: 4em;
+    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    cursor: pointer;
 }
 
 #div0{
@@ -38,9 +45,20 @@ body{
 input[type="button"]{
     position: absolute;
     top:400px;
-    left:50%;
+    left:35vw;
+    width: 30vw;
+    height: 10vw;
+    font-size: 3vw;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+    border-radius: 5vw;
+    cursor: pointer;
+    transition: background 0.2s ease;
 }
 
+input[type="button"]:hover{
+    background: lightblue;
+}
 
 /*
     Ispod se pišu klase koje važe za stranicu do maksimalne širine navedene u zagradama ( max-width: __px ).
