--- a/public/web/primeri/template/index.html
+++ b/public/web/primeri/template/index.html
@@ -13,6 +13,7 @@ Ovo je osnovna struktura jedne HTML stranice koja ima tri eksterna fajla:
         <script src="files/script.js"></script>
         <link rel="icon" type="image/x-icon" href="files/favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta charset="UTF-8">
     </head>
     <body>
 
